# tinysvcmdns

./: .hgignore  .travis.yml  CMakeLists.txt  Makefile  README.markdown  README.txt  appveyor.yml  mdns.c  mdns.h  mdns_common.h  mdns_config.h.in  mdnsd.c  mdnsd.h  testmdnsd.c
tests/: CMakeLists.txt  check_service.c
tools/travis/: travis_linux_script.sh
